# DocumentManipulation

./: README.md  docker-compose.backend.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260217_0001_initial_schema.py  20260217_0002_add_idempotency_key_to_command_runs.py  20260217_0003_add_user_password_hash.py  20260304_0004_add_missing_image_url_columns.py  2a8c29b41c81_add_run_id_and_image_url_columns.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/v1/: auth.py  compare.py  documents.py  logs.py  orchestration.py  tools.py  upload.py  versions.py
backend/app/auth/: security.py
backend/app/config/: settings.py
backend/app/db/: session.py
backend/app/db/models/: __init__.py  command_run.py  document.py  document_version.py  tool_execution_log.py  user.py
backend/app/domain/: compare.py
backend/app/domain/documents/: repository.py  schemas.py  service.py
backend/app/domain/logs/: repository.py  schemas.py  service.py
backend/app/domain/tools/: executor.py  locator_utils.py
backend/app/domain/users/: repository.py  schemas.py  service.py
backend/app/domain/versions/: repository.py  retention.py  schemas.py  service.py
backend/app/jobs/: cleanup_runner.py  queue.py  worker.py
backend/app/mcp/: registry.py  validators.py
backend/app/orchestration/: graph.py  repository.py  schemas.py  service.py
backend/app/storage/: asset_service.py  cloudinary_client.py
backend/tests/unit/auth/: test_security.py  (+1 more)
(+74 files in other folders)
