[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-agent-backend"
version = "0.1.0"
description = "FastAPI backend for AI Document Agent Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "python-multipart>=0.0.9"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
