[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-agent-backend"
version = "0.1.0"
description = "FastAPI backend for AI Document Agent Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "python-multipart>=0.0.9",
  "langgraph>=0.2.34",
  "cloudinary>=1.41.0",
  "groq>=0.9.0",
  "psycopg[binary]>=3.2.0",
  "pymupdf>=1.24.10",
  "pytest>=8.3.0",
  "passlib[bcrypt]>=1.7.4",
  "python-jose[cryptography]>=3.4.0",
  "email-validator>=2.2.0",
  "rq>=1.16.2",
  "redis>=5.0.8"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
